kubernetes-networks/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homework
  namespace: homework

spec:
  parentRefs:
    - name: homework-gateway

  hostnames:
    - "homework.otus"

  rules:
    - matches:
        - path:
            type: Exact
            value: /homepage

      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.html

      backendRefs:
        - name: homework
          port: 80

    - backendRefs:
        - name: homework
          port: 80
